Socials and gig additional info

--- a/_posts/2023-10-06-labs.markdown
+++ b/_posts/2023-10-06-labs.markdown
@@ -5,8 +5,13 @@ date:   2023-10-06 20:00:00 +0000
 categories: bass gig concert "bob dylan" "lancaster album band"
 ---
 
+Tickets: https://www.settlevictoriahall.org.uk/eventsandshows/blonde-on-blonde-061023
+
 [The Lancaster Album Band (LABs)](https://thelabsband.co.uk) performing Bob Dylan's Blonde on Blonde from start to finish.
 With support from Dan Haywood.
+
+The LABs: Andrew Raven, Matt Canty, Rob Daniels, Sam Lawrence, Guy Morris, Christian Madden, and Pete French.
+Dan Haywood: Dan Haywood, Bill Roberts, Gary Thistlethwaite, and Matt Canty.
 
 This video was taken on the night:
 
